--- a/Challenge04LGBB/View/ChoosenRecipe.storyboard
+++ b/Challenge04LGBB/View/ChoosenRecipe.storyboard
@@ -8,6 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--ConfigScreen-->
+        <scene sceneID="pac-c8-3Qt">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ConfigScreen" id="lfX-SD-Q8k" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="twu-Bi-9eU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="561" y="-201"/>
+        </scene>
         <!--Main-->
         <scene sceneID="yYz-m8-R0u">
             <objects>
@@ -33,19 +41,29 @@
                                     <segue destination="k0H-Kv-ks9" kind="presentation" modalPresentationStyle="fullScreen" id="AqW-82-g5C"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6X5-AK-laJ">
+                                <rect key="frame" x="327" y="94" width="67" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Settings"/>
+                                <connections>
+                                    <segue destination="lfX-SD-Q8k" kind="presentation" modalPresentationStyle="fullScreen" id="7M2-X6-fEn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="17"/>
+            <point key="canvasLocation" x="34.782608695652179" y="16.741071428571427"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="Settings" width="33" height="33"/>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
